# Application

./: CMakeLists.txt  Readme.md  build.bat  build_client.sh  run_application.bat
.github/workflows/: cmake-multi-platform.yml
client/: CMakeLists.txt  build_client.sh  chat_client.cpp  chat_client.hpp  crypto.cpp  crypto.hpp  main.cpp
jenkins/: Jenkinsfile  clone.yaml
server/: server.py
